--- a/projects/DailySpendLimit/src/app/dashboard/dashboard.component.html
+++ b/projects/DailySpendLimit/src/app/dashboard/dashboard.component.html
@@ -1,4 +1,4 @@
-<page-title name="Dashboard" [canAddNew]="false"></page-title>
+<page-title name="Dashboard"></page-title>
 
 <general-error [errors]="errors"></general-error>
 
