--- a/projects/DailySpendLimit/src/app/setup/setup-permissions.component.html
+++ b/projects/DailySpendLimit/src/app/setup/setup-permissions.component.html
@@ -1,4 +1,4 @@
-<page-title name="Setup" [canAddNew]="false"></page-title>
+<page-title name="Setup"></page-title>
 
 <general-error [errors]="errors"></general-error>
 
