--- a/projects/VinesToWinesDM/src/app/admin/wines/admin-wines-edit.component.html
+++ b/projects/VinesToWinesDM/src/app/admin/wines/admin-wines-edit.component.html
@@ -74,7 +74,12 @@
 
         <cms-editor [content]="wine.description" (changed)="onItemChange(wine, 'description', $event)" [disabled]="readOnly"></cms-editor>
 
-        <button mat-raised-button (click)="onSetPhoto(wine, wineType)">Set Photo</button>
+        <mat-form-field floatLabel="always" class="mat-form-field--no-underline" style="margin-top: 1em">
+          <!-- the matInput with display:none makes the magic. It's ugly, I've warned you -->
+          <input matInput placeholder="Photo" style="display: none">
+          <img *ngIf="wine.photo?.location" [src]="wine.photo.location" [height]="wine.photo.height" [width]="wine.photo.width">
+          <button mat-raised-button (click)="onSetPhoto(wine, wineType)">Set Photo</button>
+        </mat-form-field>
       </mat-expansion-panel> <!-- wines -->
     </mat-expansion-panel> <!-- wine types -->
   </mat-card-content>
