--- a/projects/VinesToWinesDM/src/app/admin/wines/admin-wines-edit.component.scss
+++ b/projects/VinesToWinesDM/src/app/admin/wines/admin-wines-edit.component.scss
@@ -8,3 +8,7 @@
   justify-content: space-between;
   align-items: center;
 }
+
+.mat-form-field--no-underline ::ng-deep .mat-form-field-underline {
+  background-color: transparent;
+}
