--- a/projects/VinesToWinesDM/src/app/homepage/homepage.component.html
+++ b/projects/VinesToWinesDM/src/app/homepage/homepage.component.html
@@ -33,7 +33,7 @@
           <!-- <vtw-wines-summary></vtw-wines-summary> -->
         </mat-card-content>
         <mat-card-actions>
-          <a mat-raised-button color="accent" routerLink="wine-list">Learn more</a>
+          <a mat-raised-button color="accent" routerLink="wines">Learn more</a>
         </mat-card-actions>
       </mat-card>
     </section>
