--- a/projects/material-helpers/mh-input-text/src/lib/input-text.component.html
+++ b/projects/material-helpers/mh-input-text/src/lib/input-text.component.html
@@ -1,7 +1,9 @@
 <mat-form-field appearance="standard" style="width: 100%">
   <mat-label>{{label}}</mat-label>
-  <input type="text" matInput [attr.name]="inputName" [attr.maxlength]="_maxlength" [attr.style]="_style" [placeholder]="placeholder"
-    [disabled]="disabled" [required]="required" [(ngModel)]="_model" [errorStateMatcher]="errorStateMatcher" (change)="onChange()">
-  <mat-hint>{{hint}}</mat-hint>
+  <input type="text" matInput #inp [attr.name]="inputName" [attr.maxlength]="_maxlength" [attr.style]="_style"
+    [placeholder]="placeholder" [disabled]="disabled" [required]="required" [(ngModel)]="_model" [errorStateMatcher]="errorStateMatcher"
+    (change)="onChange()">
+  <mat-hint align="start">{{hint}}</mat-hint>
+  <mat-hint align="end" *ngIf="_maxlength">{{inp.value.length}} / {{_maxlength}}</mat-hint>
   <mat-error>{{errMsg}}</mat-error>
 </mat-form-field>
