--- a/projects/VinesToWinesDM/src/app/homepage/homepage.component.html
+++ b/projects/VinesToWinesDM/src/app/homepage/homepage.component.html
@@ -30,7 +30,7 @@
       <mat-card fxLayout="column" ngStyle.gt-xs="height: 100%">
         <mat-card-content fxFlex.gt-xs="grow">
           <h2>Our Wines</h2>
-          <!-- <vtw-wines-summary></vtw-wines-summary> -->
+          <vtw-wines-summary></vtw-wines-summary>
         </mat-card-content>
         <mat-card-actions>
           <a mat-raised-button color="accent" routerLink="wines">Learn more</a>
