--- a/projects/VinesToWinesDM/src/app/app-root/app-header/app-header.component.html
+++ b/projects/VinesToWinesDM/src/app/app-root/app-header/app-header.component.html
@@ -1,8 +1,8 @@
 <mat-toolbar color="primary" fxLayout="column" fxLayout.gt-xs="row">
-  <mat-toolbar-row fxFlex="100%" fxFlex.gt-xs="10em" ngClass.lt-sm="mat-elevation-z6">
-    <mat-toolbar-row style="padding: 0; outline: none; cursor: pointer;" routerLink="/">
-      Vines to Wines DM
-    </mat-toolbar-row>
+  <mat-toolbar-row style="outline: none; cursor: pointer;" fxFlex="100%" fxFlex.gt-xs="11.5em" ngClass.lt-sm="mat-elevation-z6"
+    routerLink="/">
+    <img src="assets/Logo.png" style="height: 95%; margin-right: .5em">
+    Vines to Wines DM
   </mat-toolbar-row>
 
   <mat-toolbar-row #menuBar>
