--- a/projects/VinesToWinesDM/src/app/wines/detail/wines-detail.component.html
+++ b/projects/VinesToWinesDM/src/app/wines/detail/wines-detail.component.html
@@ -2,8 +2,9 @@
 
 <general-error [errors]="errors"></general-error>
 
-<section fxLayout="column" fxLayoutGap="1em">
-  <mat-card *ngFor="let wineType of model.wineTypes">
+<section fxLayout="column" fxLayoutGap="1em" fxLayoutAlign="start center">
+  <mat-card *ngFor="let wineType of model.wineTypes" [ngStyle.sm]="{'width': '80vw'}" [ngStyle.md]="{'width': '70vw'}"
+    [ngStyle.lg]="{'width': '60vw'}">
     <mat-card-header>
       <mat-card-title>{{wineType.name}}</mat-card-title>
       <mat-card-subtitle>{{wineType.description}}</mat-card-subtitle>
