--- a/projects/StavesChurch/src/app/ministries/ministries.component.html
+++ b/projects/StavesChurch/src/app/ministries/ministries.component.html
@@ -3,19 +3,30 @@
 <general-error [errors]="errors"></general-error>
 
 <mat-card>
-  <mat-card-content (click)="onContentClick($event)">
-    <section *ngIf="showOverview">
+  <mat-card-content (click)="onContentClick($event)" fxLayout="column" fxLayoutGap=".5em">
+    <!-- <section *ngIf="showOverview">
       <p [innerHTML]="sanitizedHeader"></p>
 
       <mat-nav-list>
         <a mat-list-item *ngFor="let item of model.list" routerLink="{{item.name}}">{{item.name}}</a>
       </mat-nav-list>
+    </section> -->
+    <p [innerHTML]="sanitizedHeader"></p>
+
+    <section *ngFor="let item of model.list">
+      <mat-expansion-panel>
+        <mat-expansion-panel-header>
+          {{item.name}}
+        </mat-expansion-panel-header>
+
+        <div style="margin-top: 1em" [innerHTML]="item.sanitizedPurpose"></div>
+      </mat-expansion-panel>
     </section>
 
-    <section *ngIf="!showOverview">
+    <!-- <section *ngIf="!showOverview">
       <h2 style="margin: 0">{{ministryName}}</h2>
       <p [innerHTML]="sanitizedPurpose"></p>
-    </section>
+    </section> -->
   </mat-card-content>
   <mat-card-actions>
     <button mat-raised-button color="accent" (click)="onOKClick()">OK</button>
