--- a/projects/StavesChurch/src/app/homepage/banner/homepage-banner.component.html
+++ b/projects/StavesChurch/src/app/homepage/banner/homepage-banner.component.html
@@ -1,5 +1,5 @@
 <section class="bg-image" style="background-image: linear-gradient(rgba(0, 0, 0, 0.25), rgba(0, 0, 0, 0.25)), url('assets/homepage.jpg')"
   fxLayout="column" fxLayoutAlign="center center">
   <h1>Welcome to Staves Memorial United Methodist Church</h1>
-  <i>A community of faith called into being by God through Jesus Christ.</i>
+  <i style="margin: 0 .5em">A community of faith called into being by God through Jesus Christ.</i>
 </section>
