--- a/projects/TiffanysKitchen/src/app/recipes/recipes.component.html
+++ b/projects/TiffanysKitchen/src/app/recipes/recipes.component.html
@@ -1,4 +1,4 @@
-<page-title name="Recipes" [canAddNew]="false"></page-title>
+<page-title name="Recipes"></page-title>
 
 <form (ngSubmit)="addSearchTerm()">
   <mat-card>
