--- a/projects/TiffanysKitchen/src/app/setup/sheet/sheet.component.html
+++ b/projects/TiffanysKitchen/src/app/setup/sheet/sheet.component.html
@@ -1,4 +1,4 @@
-<page-title name="Setup" [canAddNew]="false"></page-title>
+<page-title name="Setup"></page-title>
 
 <general-error [errors]="errors"></general-error>
 
