--- a/projects/VinesToWinesDM/src/app/wines/detail/wines-detail.component.html
+++ b/projects/VinesToWinesDM/src/app/wines/detail/wines-detail.component.html
@@ -2,7 +2,7 @@
 
 <general-error [errors]="errors"></general-error>
 
-<section fxLayout="column" fxLayoutGap="1em" fxLayoutAlign="start center">
+<section class="wines" fxLayout="column" fxLayoutGap="1em" fxLayoutAlign="start center">
   <mat-card *ngFor="let wineType of model.wineTypes" [ngStyle.sm]="{'width': '80vw'}" [ngStyle.md]="{'width': '70vw'}"
     [ngStyle.lg]="{'width': '60vw'}">
     <mat-card-header>
